feat: implement user endpoints
