# internal/model/user.go
@@ -1,22 +1,21 @@
 package model
 
 import (
-	"time"
-
 	"gorm.io/gorm"
 )
 
 type User struct {
-	Id        uint   `gorm:"primarykey"`
-	UserId    string `gorm:"unique;not null"`
+	gorm.Model
+	UserID    string `gorm:"unique;not null"`
+	Username  string `gorm:"unique;not null"`
 	Nickname  string `gorm:"not null"`
 	Password  string `gorm:"not null"`
-	Email     string `gorm:"not null"`
-	CreatedAt time.Time
-	UpdatedAt time.Time
-	DeletedAt gorm.DeletedAt `gorm:"index"`
+	Email     string `gorm:"unique;not null"`
+	AvatarUrl string `gorm:"not null"`
+	Status    int    `gorm:"not null"`
+	Teams     []Team `gorm:"many2many:user_team_role;"`
 }
 
 func (u *User) TableName() string {
-	return "users"
+	return "user"
 }
